# ProvaFinale

./: CMakeLists.txt  log.txt
include/: Board.h  BoardBox.h  BoardBoxBlank.h  BoardBoxEco.h  BoardBoxLux.h  BoardBoxProperty.h  BoardBoxStart.h  BoardBoxStd.h  BoardManager.h  GlobalLogger.h  Human.h  Logger.h  Pc.h  Player.h  exceptions.h
src/: Board.cpp  BoardBox.cpp  BoardBoxBlank.cpp  BoardBoxProperty.cpp  BoardManager.cpp  GlobalLogger.cpp  Human.cpp  Pc.cpp  Player.cpp  main.cpp
